--- a/Poprawa/Poprawa.csproj
+++ b/Poprawa/Poprawa.csproj
@@ -8,13 +8,13 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Controllers\" />
       <Folder Include="Dtos\" />
       <Folder Include="Exceptions\" />
-      <Folder Include="Models\" />
     </ItemGroup>
 
 </Project>
